Open proposal review to invited contributors
